--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6{
+    text-align: center;
     font-family: "Libre Baskerville";
     
 }
@@ -22,15 +23,35 @@ header {
     color: #D2D9D8;
 
 }
-
+/* Hero Section */
 #hero img{
     width: 280px;
 
 }
-
+/*Bio section */
 #bio{
     text-align: center;
     font-size :20px;
+}
+/* Hobby Section */
+#hobbies{
+    text-align:center;
+    list-style: inside;
+
+}
+/* Gallery Section*/
+#gallery {
+    border: 10px #D96D55;
+    
+}
+
+#gallery img {
+    max-width: 100%;
+    max-height: 640px;
+}
+
+#gallery figure {
+    text-align: center;
 }
 
 
