--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ h2{
 header {
     text-align: center;
 }
+/* Hero Section */
 
 #hero, footer{
     background-color: #557373;
@@ -28,7 +29,7 @@ header {
     box-shadow: 2px 2px 8px 2px #000000;
 
 }
-/* Hero Section */
+
 #hero img{
     width: 280px;
 
@@ -62,6 +63,8 @@ header {
     text-align: center;
 }
 
+/* Literary Section */
+
 #lit {
     border: 5px double #253b40;
     outline-offset: 0px;   
@@ -77,7 +80,7 @@ header {
 
 
 }
-
+/* footer Section */
 
 footer{
     text-align: center
