--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ header {
     max-width: 55rem;
     margin:0 auto;
     text-indent: 2rem;
+    columns: 20rem;
+    max-width: 100%;
 
 
 }
@@ -89,6 +91,8 @@ footer{
     text-align: center
 }
 
+
+/* tablet screen */
 @media screen and (min-width: 60em){
     figure{
         display: grid;
@@ -101,7 +105,33 @@ footer{
         justify-content: center;
         align-items: center;
         font-size: 2.5rem;
-        margin-left: .5rem;
+        margin-left: .2rem;
+
+    }
+
+    figure img {
+        max-width: 100%;
+    }
+/* large screen */
+@media screen and (min-width: 100em) {
+
+    #gallery{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+
+    }
+
+    hr{
+        display: none;
+    }
+
+    #gallery h2{
+        grid-column: 1/-1;
+    }
+
+    figure{
+        display: block;
+    }
 
     }
 
