--- a/css/style.css
+++ b/css/style.css
@@ -207,5 +207,7 @@ legend {
     max-width: 600px;
     width: 75%;
     justify-self: center;
+    font-family: "Libre Baskerville";
+    font-style: italic; 
     
 }
