--- a/css/nav.css
+++ b/css/nav.css
@@ -1,16 +1,39 @@
 /* make scrolling smooth */
 
+html{
+    scroll-behavior: smooth;
+}
 
 /* 
  get rid of padding & sizing on body so
  header is at top
 */
 
+body {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
+
+
 
 /* add some padding back to rest of page */
 
+main{
+    padding: 2vw;
+}
 
 /* navbar */
+
+.navbar{
+    background-color: #557373;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
 
 
 
@@ -18,13 +41,19 @@
 
 
 
+
+
 /* navigation list */
+
+
 
 
 /*  
  style all a tags in header 
  and then on hover
 */
+
+
 
 
 
