--- a/css/nav.css
+++ b/css/nav.css
@@ -75,9 +75,19 @@ main{
     font-size: 1.5rem;
     padding: 1rem;
     letter-spacing: 2px;
+    text-decoration: none;
+    display: inline-block;
     
 }
 
+.navbar-links a:hover,
+.navbar-links a:focus {
+    color: #D2D9D8;
+    background-color: #253b40;
+    border-radius: 10px;
+    outline: none;
+
+}
 
 
 
