--- a/css/nav.css
+++ b/css/nav.css
@@ -32,6 +32,7 @@ main{
     flex-direction: column;
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    padding: 1rem;
 }
 
 
@@ -39,6 +40,7 @@ main{
 .logo{
     display: flex;
     align-items: center;
+    color: whitesmoke;
 }
 
 .logo img{
@@ -70,10 +72,10 @@ main{
 */
 
 .navbar-links a{
-    color: #b84c22;
+    color: whitesmoke;
     background-attachment: whitesmoke;
-    font-size: 1.5rem;
-    padding: 1rem;
+    font-size: 1.75rem;
+    padding: 1rem 1.25rem;
     letter-spacing: 2px;
     text-decoration: none;
     display: inline-block;
@@ -97,3 +99,19 @@ media query for non-mobile nav bar
 min-width set to width of nav elements 
 such that no text wraps 
 */
+
+@media screen and (min-width: 60rem) {
+
+    .navbar {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .navbar ul{
+        display: flex;
+        justify-content: space-between;
+    }
+
+
+    
+}
