--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ h2{
     background-color: #557373;
     text-align: center;
     padding:15px;
-    color: #D2D9D8;
+    color: whitesmoke;
     box-shadow: 2px 2px 8px 2px #000000;
     font-size: 1.5rem;
 
