--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ h2{
 /* Hobby Section */
 
 #hobbies{
-    text-align:center;
+    text-align: justify;
     list-style: inside;
     font-size: 20px;
     display: flex;
